# polymath

./: 404.html  Cargo.toml  README.md  build.rs  go.mod  index.html  main.go  print.html  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: docker.yaml  docs.yaml  rust-clippy.yml  rust.yml
cli/: Cargo.toml  crawl.html  index.html
cli/src/: crawl.rs  main.rs
crates/deadpool-kafka/: Cargo.toml  LICENSE-MIT
crates/deadpool-kafka/src/: lib.rs
crates/polymath/: Cargo.toml
crates/polymath-cache/: Cargo.toml
crates/polymath-cache/src/: lib.rs  lru.rs
crates/polymath-crawler/: Cargo.toml
crates/polymath-crawler/src/: lib.rs
crates/polymath-crawler/src/extractor/: link.rs  meta.rs  mod.rs
crates/polymath-db/: Cargo.toml
crates/polymath-error/: Cargo.toml
crates/polymath-error/src/: lib.rs
crates/polymath-queue/: Cargo.toml
crates/polymath/src/: main.rs
docker/: Dockerfile  README.md
docs/: book.toml
docs/src/: README.md  SUMMARY.md
docs/src/cli/: README.md  crawl.md
docs/src/extension/: robots.md  sitemap.md  solr.md
docs/src/guide/: deployment.md  installation.md  uninstallation.md
extension/: robots.html  sitemap.html  solr.html
extensions/robots/: Cargo.toml
extensions/sitemap/: Cargo.toml
extensions/solr/: Cargo.toml
extensions/solr/src/: lib.rs
guide/: deployment.html  installation.html  uninstallation.html
polymath/: Cargo.toml
polymath-queue/: Cargo.toml
proto/crawl/: crawl.proto
proto/helloworld/: helloworld.proto
src/: client.rs  main.rs  server.rs
src/helpers/: get.rs  nats.rs
