[workspace]
resolver = "2"
members = [
    "cli",

    "crates/polymath",
    "crates/polymath-cache",
    "crates/polymath-crawler",
    "crates/polymath-error",
    "crates/polymath-queue",

    "extensions/robots",
    "extensions/sitemap",
    "extensions/solr",
]

[workspace.package]
version = "0.1.0"
description = "web crawler"
readme = "README.md"
edition = "2021"
license = "Apache-2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.cli]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = true
