[package]
name = "deadpool-kafka"
version = "0.1.0"
description = "Dead simple async pool for kafka"
readme.workspace = true
edition.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
deadpool = { version = "0.12", default-features = false, features = ["managed"] }
kafka = { version = "0.10", default-features = false }
tokio-executor-trait = { version = "2.1.3", optional = true }
async-executor-trait = { version = "2.1.0", optional = true }

[features]
compression = ["kafka/snappy"]
security = ["kafka/security"]
rt_tokio_1 = ["deadpool/rt_tokio_1", "tokio-executor-trait"]
rt_async-std_1 = ["deadpool/rt_async-std_1", "async-executor-trait"]