[package]
name = "polymath-crawler"
version.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
regex-lite = "0.1"
ureq = "2.9"
url = "2.5"
lazy_static = "1.5"
scraper = "0.19"
tracing = "0.1"
polymath-cache = { path = "../polymath-cache" }
polymath-error = { path = "../polymath-error" }
polymath-queue = { path = "../polymath-queue" }
