[package]
name = "polymath"
version.workspace = true
description = "public api to crawl selected websites"
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
polymath-cache = { path = "../polymath-cache" }
polymath-crawler = { path = "../polymath-crawler" }
polymath-queue = { path = "../polymath-queue" }
