[package]
name = "solr"
version = "0.1.0"
description = "polymath extension to push pages on Solr"
readme.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
polymath-crawler = { path = "../../crates/polymath-crawler" }
polymath-error = { path = "../../crates/polymath-error" }
